add a navigation bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
 </head>
 
 <body>
-
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#"><em>Pizzahub</em></a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Hub Menu</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+            <button class="btn btn-danger navbar-btn">Order</button>
+        </div>
+    </nav>
 
 </body>
 
