create landing page and also include a background image

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             <button class="btn btn-danger navbar-btn">Order</button>
         </div>
     </nav>
+    <div class="container">
+        <div class="landing">
+            <h1>WELCOME TO</h1>
+            <h1><strong> PIZZA HUB</strong></h1>
+        </div>
+    </div>
 
 </body>
 
