add an about us section and style it in css

--- a/index.html
+++ b/index.html
@@ -27,12 +27,22 @@
             <button class="btn btn-danger navbar-btn">Order</button>
         </div>
     </nav>
-    <div class="container">
-        <div class="landing">
-            <h1>WELCOME TO</h1>
-            <h1><strong> PIZZA HUB</strong></h1>
+
+    <div class="landing">
+        <h1>WELCOME TO</h1>
+        <h1><strong> PIZZA HUB</strong></h1>
+    </div>
+
+    <div class="container about" id="about-us">
+        <div class="bg-text">
+            <p>The homemade pizza dough is produced in-house daily and is another reason why the pizza at Pizza Hub always tastes better.</p>
+            <p>The Twisty Bread, the signature Wingz and the delicious Double Meal are additional value-for-money options</p>
+            <p>that keep our satisfied customers coming back time after time.</p>
+            <p>These are the meals that have made our Terrific Tuesday everyone’s favorite day of the week.</p>
+            <p>When entertaining, a Hawaiian pizza, a Regina pizza, or a Peri Peri Chicken pizza from Pizza Hub is the obvious and perfect option to please crowds of all ages. </p>
         </div>
     </div>
+
 
 </body>
 
