--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#"><em>Pizzahub</em></a>
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Hub Menu</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#menu">Hub Menu</a></li>
+                <li><a href="#about-us">About Us</a></li>
+                <li><a href="#contact">Contact Us</a></li>
             </ul>
             <button class="btn btn-danger navbar-btn">Order</button>
         </div>
@@ -33,16 +33,48 @@
         <h1><strong> PIZZA HUB</strong></h1>
     </div>
 
-    <div class="container about" id="about-us">
-        <div class="bg-text">
-            <p>The homemade pizza dough is produced in-house daily and is another reason why the pizza at Pizza Hub always tastes better.</p>
-            <p>The Twisty Bread, the signature Wingz and the delicious Double Meal are additional value-for-money options</p>
-            <p>that keep our satisfied customers coming back time after time.</p>
-            <p>These are the meals that have made our Terrific Tuesday everyone’s favorite day of the week.</p>
-            <p>When entertaining, a Hawaiian pizza, a Regina pizza, or a Peri Peri Chicken pizza from Pizza Hub is the obvious and perfect option to please crowds of all ages. </p>
+    <div class="container">
+        <div class="container about" id="about-us">
+            <div class="bg-text">
+                <p>The homemade pizza dough is produced in-house daily and is another reason why the pizza at Pizza Hub always tastes better.</p>
+                <p>The Twisty Bread, the signature Wingz and the delicious Double Meal are additional value-for-money options</p>
+                <p>that keep our satisfied customers coming back time after time.</p>
+                <p>These are the meals that have made our Terrific Tuesday everyone’s favorite day of the week.</p>
+                <p>When entertaining, a Hawaiian pizza, a Regina pizza, or a Peri Peri Chicken pizza from Pizza Hub is the obvious and perfect option to please crowds of all ages. </p>
+            </div>
         </div>
-    </div>
 
+        <div class="menu">
+            <h2>PIZZA SIZES</h2><br>
+            <div class="row" id="order">
+                <div class="col-md-4" id="image">
+                    <img src="img/medium.png" height='150' width='150' alt="Small Pizza"><br>
+                    <div class="pname">
+                        <div class="text">Small Size</div>
+                    </div>
+                </div>
+                <div class="col-md-4" id="image">
+                    <img src="img/medium.png" height='150' width='150' alt="Medium Pizza"><br>
+                    <div class="pname">
+                        <div class="text">Medium Size</div>
+                    </div>
+                </div>
+                <div class="col-md-4" id="image">
+                    <img src="img/medium.png" height='150' width='150' alt="Large pizza"><br>
+                    <div class="pname">
+                        <div class="text">Large Size</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-fluid contact">
+                <div id="contact">
+                    <h2>CONTACT US</h2>
+                    <p><strong>Contact us to make an order:</strong><em> 0719240756</em></p>
+                    <p>Email:<span>gideonollonde@gmail.com</span></p>
+                </div>
+            </div>
+        </div>
 
 </body>
 
