create order.html file

--- a/index.html
+++ b/index.html
@@ -46,21 +46,22 @@
 
         <div class="menu">
             <h2>PIZZA SIZES</h2><br>
+            <img src="img/top.jpg" alt="pizza price" height='800' width='1200'><br><br><br>
             <div class="row" id="order">
                 <div class="col-md-4" id="image">
-                    <img src="img/medium.png" height='150' width='150' alt="Small Pizza"><br>
+                    <img src="img/medium.png" height='150' width='150' alt="Small Pizza">
                     <div class="pname">
                         <div class="text">Small Size</div>
                     </div>
                 </div>
                 <div class="col-md-4" id="image">
-                    <img src="img/medium.png" height='150' width='150' alt="Medium Pizza"><br>
+                    <img src="img/medium.png" height='150' width='150' alt="Medium Pizza">
                     <div class="pname">
                         <div class="text">Medium Size</div>
                     </div>
                 </div>
                 <div class="col-md-4" id="image">
-                    <img src="img/medium.png" height='150' width='150' alt="Large pizza"><br>
+                    <img src="img/medium.png" height='150' width='150' alt="Large pizza">
                     <div class="pname">
                         <div class="text">Large Size</div>
                     </div>
