edit page outlook

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                         <div class="text">Large Size</div>
                     </div>
                 </div>
-            </div>
+            </div><br>
 
             <div class="container-fluid contact">
                 <div id="contact">
                     <h2>CONTACT US</h2>
-                    <p><strong>Contact us to make an order:</strong><em> 0719240756</em></p>
+                    <p><strong>Contact us to make an order:</strong><em> +254719240756</em></p>
                     <p>Email:<span>gideonollonde@gmail.com</span></p>
                 </div>
             </div>
