--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="menu">
         <h2>PIZZA SIZES</h2><br>
         <img src="img/top.jpg" alt="pizza price" height='800' width='1200'><br><br><br>
-        <div class="row" id="order">
+        <div class="row" id="pizza">
             <div class="col-md-4" id="image">
                 <img src="img/medium.png" height='150' width='150' alt="Small Pizza">
                 <div class="pname">
@@ -119,6 +119,56 @@
 
             </form>
         </div>
+        <div class="col-sm-7">
+            <div id="information">
+                <p>Your order will be processed and delivered within one hour of placing.</p>
+                <p>Make sure you have the total amout for the order during order delivery delivery.</p>
+                <p>Incase of any comment of complaint, Please reach out to us as fast as possible.</p>
+                <p id="regards">Regards, Management</p>
+            </div>
+            <div class="choice">
+                <h2>Your Order is:</h2>
+                <div id="your-orders">
+                    <table class="table table-sm  pizzatable">
+                        <thead>
+                            <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col">Size</th>
+                                <th scope="col">Crust</th>
+                                <th scope="col">Topping</th>
+                                <th scope="col">Total</th>
+                            </tr>
+                        </thead>
+                        <tbody id="ordersmade">
+                            <tr>
+                                <td id="pizzaname"></td>
+                                <td id="pizzasize"></td>
+                                <td id="pizzacrust"></td>
+                                <td id="pizzatopping"></td>
+                                <td id="totals"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p id="pizzatotal"></p>
+                    <p id="totalbill"></p>
+                    <p id="addedprice">Delivery will cost sh. 150</p>
+                    <p id="finalmessage"></p>
+                </div>
+                <button class="btn btn-orange addPizza">Add Pizza</button>
+                <button class="btn btn-orange" id="checkout">Checkout</button>
+                <button class="btn btn-orange deliver">Home delivery?</button>
+            </div>
+            <div class="delivery">
+                <form action="">
+                    <div class="form-group">
+                        <input type="text" id="name" class="form-control mb-3" placeholder="Name">
+                        <input type="number" id="phone" class="form-control mb-3" placeholder="Pnone Number">
+                        <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
+                        <button class="btn btn-orange" id="final-order">Place Order</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
     <div class="container-fluid contact">
@@ -129,6 +179,8 @@
         </div>
     </div>
 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
