styled the order here section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="menu">
-        <h2>PIZZA VARIETIES</h2><br>
+        <h2>PIZZA VARIETY</h2><br>
         <img src="img/top.jpg" alt="pizza price" height='800' width='1200'>
     </div>
 
@@ -71,9 +71,9 @@
                         <label for="select">Select Size</label>
                         <select class="browser-default custom-select custom-select-md mb-3" id="size">
                       <option selected value="0">Select size here</option>
-                      <option value="large">Large -- sh. 1200</option>
-                      <option value="medium">Medium -- sh. 850</option>
-                      <option value="small">Small -- sh. 600</option>
+                      <option value="large">Large -- sh. 1050</option>
+                      <option value="medium">Medium -- sh. 830</option>
+                      <option value="small">Small -- sh. 550</option>
                     </select>
                         <label for="crust">Choose your favorite Crust!</label>
                         <select class="browser-default custom-select custom-select-md mb-3" id="crust">
