fix html to js link error

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#about-us">About Us</a></li>
                 <li><a href="#contact">Contact Us</a></li>
             </ul>
-            <button class="btn btn-danger navbar-btn">Order</button>
+            <button class="btn btn-danger navbar-btn"><a href="#make-order"></a>Order</button>
         </div>
     </nav>
 
@@ -163,7 +163,7 @@
     </div>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
